[package]
name = "vkapi"
version = "0.1.0"
authors = ["Sergey Duck <sergeypechnikov326@gmail.com>"]
edition = "2018"
description = "Rust create for interacting with VK API"
readme = "README.md"
repository = "https://github.com/DuckerMan/vk_api"
keywords = ["rust", "vk", "vk_api"]
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
json = "*"
futures = "0.3"